--- a/rollup.html
+++ b/rollup.html
@@ -1,3 +1,8 @@
-<script src="service-worker-client.js"></script>
-<script src="https://unpkg.com/rollup/dist/rollup.browser.js"></script>
-<script src="./scripts/rollup-bundle.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- <script src="service-worker-client.js"></script> -->
+  <script src="https://unpkg.com/rollup/dist/rollup.browser.js"></script>
+  <script src="./scripts/rollup-bundle.js"></script>
+</head>
+</html>
