--- a/markup.html
+++ b/markup.html
@@ -5,15 +5,15 @@
   <title>SMotaal's Markup</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover">
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 
   <template id="source-header">
     <header>
       <div id="summary">
-        <span title="SourceTextURL">#<span id="source"></span><time></time></span>
+        <span title="source">#<span id="source"></span><time></time></span>
       </div>
       <div id="details">
-        <span title="render"><span id="render"></span><time></time></span>
+        <span title="type"><b><span id="source-type"></b></span></span>
         <span title="repeats"><span id="repeats"></span><time></time></span>
         <span title="iterations"><span id="iterations"></span><time></time></span>
       </div>
@@ -28,29 +28,28 @@
   <template>
     <custom-element custom-attribute=true namespace:attribute=false></custom-element>
   </template>
-
   <!-- <script src="service-worker-client.js"></script> -->
+  <script>
+    (async () => (await navigator.serviceWorker.getRegistrations()).forEach(registration => registration.unregister()))().catch(console.warn);
+  </script>
 </head>
 
 <body>
-  <script>new Worker('./rollup-worker.js');</script>
+  <!-- <script>new Worker('./rollup-worker.js');</script> -->
   <pre id="source-code" class="markup-container" hidden>
     <script>
       {
+        const defaults = { darkMode: true };
         const element = document.currentScript.parentElement;
-
         // TODO: Add support for @media (prefers-dark-mode) when it lands
         const prefersDarkInterface = matchMedia('prefers-dark-interface');
-
         (
           matchMedia('prefers-dark-interface').matches &&
           !element.classList.add('prefers-dark-mode') ||
-          localStorage.darkMode
+          localStorage.darkMode ||
+          defaults.darkMode
         ) && element.classList.add('dark-mode');
-
         element.hidden = false;
-
-        // navigator.serviceWorker && (async () => (await navigator.serviceWorker.getRegistrations()).forEach(registration => registration.unregister))();
       }
     </script>
   </pre>
@@ -60,7 +59,7 @@
 
     const defaults = {
       repeats: 1,
-      iterations: 0,
+      iterations: 1,
       sourceURL: './lib/markup-modes.js',
       sourceType: undefined,
       element: 'pre#source-code',
@@ -86,9 +85,11 @@
 
     const nextFrame = () => new Promise(ƒ => requestAnimationFrame(ƒ));
 
-    const renderMarkup = (sourceText, markupOptions) => (
+    const timeDelay = delay => new Promise(ƒ => setTimeout(ƒ, delay));
+
+    const renderMarkup = async (sourceText, markupOptions) => (
       markupOptions.fragment || (markupOptions.fragment = document.createDocumentFragment()),
-      markup.render(sourceText, markupOptions)
+      await markup.render(sourceText, markupOptions)
     );
 
     const renderHeader = ({
@@ -155,7 +156,7 @@
     const renderFromURL = async (specifier, sourceType) => {
       let returned, fragment, render;
 
-      const { repeats = 1, iterations = 0 } = options;
+      const { repeats = 1, iterations = 1 } = options;
       const container = sourceCodeElement;
       const now = options.now || Date.now;
 
@@ -183,51 +184,62 @@
         sourceType in markup.modes || (sourceType = 'markup');
         const markupOptions = { sourceType };
         header.status('source', `${specifier}`);
+        // header.status('source-type', `${sourceType}`);
 
         fragment = code;
 
+        const sourceID = `«${specifier.replace(/^.*\//, '…/')} [${sourceText.length}] ${sourceType}»`;
+
+        // const marker = mark => `<${specifier.replace(/^.*\//, '…/')} x ${sourceText.length}> ${mark}`;
+
         const iterate = iterations => {
-          for (let n = iterations; n--; [...markup.tokenize(sourceText, markupOptions)]);
+          // for (let n = iterations; n--; [...markup.tokenize(sourceText, markupOptions)]);
+          for (let n = iterations; n--;) {
+            // markup.every(markup.tokenize(sourceText, markupOptions));
+            for (const t of markup.tokenize(sourceText, markupOptions));
+          }
+          // for (let n = iterations; n--; Array.from(markup.tokenize(sourceText, markupOptions)));
+          // for (let n = iterations, t; n-- && (t = markup.tokenize(sourceText, markupOptions));) while(!t.next().done);
+          // console.timeEnd(mark);
         };
 
-        const repeat = repeats => {
-          for (let n = repeats; n--; code.appendChild(renderMarkup(sourceText, markupOptions)));
+        const repeat = async repeats => {
+          for (let n = repeats; n--; code.appendChild(await renderMarkup(sourceText, markupOptions)));
+        }
+
+        const timed = async (marker, ...args) => {
+          console.time(marker = `${sourceID} - ${marker}`);
+          await time(...args);
+          console.timeEnd(marker);
         }
 
         render = async () => {
           await nextFrame(code.innerText = '');
 
-          header.stats({ name: 'render', status: '', time: -1 });
+          // header.stats({ name: 'render', status: `${sourceType}`, time: -1 });
           header.stats({ name: 'repeats', status: '', time: -1 });
           header.stats({ name: 'iterations', status: '', time: -1 });
 
-          if (repeats > 0) {
-            await nextFrame(header.stats({ name: 'render', status: `${sourceType}`, time: true }));
-            time('render', ƒ => {
-              fragment = renderMarkup(sourceText, markupOptions);
-              code.appendChild(fragment);
-            });
-            header.status('render', `${sourceType}`);
-          }
-
-          if (repeats > 1) {
-            await nextFrame(header.stats({ name: 'repeats', status: `⁎${repeats}`, time: true }))
-            time('repeats', async ƒ => repeat(repeats - 1), repeats - 1);
-            header.status('repeats', `⁎${repeats}`);
-          }
-
           if (iterations > 0) {
-            await nextFrame(header.stats({ name: 'iterations', status: `⁑${iterations}`, time: true }))
+            await nextFrame(header.stats({ name: 'iterations', status: `⁑${iterations}`, time: true }));
+            await timeDelay(100);
+            await timed(`${iterations} iterations`, 'iterations', async ƒ => void await iterate(iterations), iterations);
+            await nextFrame(header.status('iterations', `⁑${iterations}`));
+          }
 
-            time('iterations', async ƒ => iterate(iterations), iterations);
-
-            header.status('iterations', `⁑${iterations}`);
+          if (repeats > 0) {
+            await nextFrame(header.stats({ name: 'repeats', status: `⁎${repeats}`, time: true }));
+            await timed(`${repeats} repeats`, 'repeats', async ƒ => void await repeat(repeats), repeats);
+            await nextFrame(header.status('repeats', `⁎${repeats}`));
           }
 
           return fragment;
         };
 
         await nextFrame();
+        // markup.initialized || await markup.initialize();
+        await markup.warmup(sourceText, markupOptions);
+        await nextFrame(header.status('source-type', `${markupOptions.mode && markupOptions.mode.syntax || sourceType}`));
         fragment = await render();
 
         return returned = fragment;
@@ -242,11 +254,11 @@
       options.repeats = repeats >= 0 ? parseInt(repeats) : defaults.repeats;
       options.iterations = iterations >= 0 ? parseInt(iterations) : defaults.iterations;
 
-      const source = (specifier && (/^\w[\w\-]*$/.test(specifier) && examples[specifier]) || specifier);
+      const example = /^\w[\w\-]*$/.test(specifier) && examples[specifier] || '';
 
+      const source = (specifier && (example.url || example) || specifier);
       const sourceURL = (source && (options.source = source)) || options.source || (options.source = defaults.sourceURL);
-      const sourceType = type || undefined;
-
+      const sourceType = type || (example.type) || undefined;
       // console.log({sourceURL, sourceType},  {specifier, type, repeats, iterations}, {source});
 
       renderFromURL(sourceURL, sourceType);
@@ -265,7 +277,10 @@
       "leo-routes": "./benchmarks/assets/pholio-routes-profile.js",
       "punctuation": "./benchmarks/assets/punctuation.js",
       "babel": "./benchmarks/assets/babel.js",
-      "acorn": "https://cdnjs.cloudflare.com/ajax/libs/acorn/5.7.3/acorn_loose.es.js",
+      "acorn": "./benchmarks/assets/acorn.js",
+      "acorn-esm": { url: "https://unpkg.com/acorn?module", type: 'esm' },
+      "acorn-cjs": { url: "https://unpkg.com/acorn", type: 'cjs' },
+      "acorn-loose": "https://cdnjs.cloudflare.com/ajax/libs/acorn/5.7.3/acorn_loose.es.js",
       "esprima": "https://cdnjs.cloudflare.com/ajax/libs/esprima/2.7.3/esprima.js",
       "babel-core": "https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.js",
       "babel-core-min": "https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js",
@@ -277,8 +292,10 @@
     sourceHeaderTemplate && (sourceHeaderTemplate.selectors = {
       'source-span': '#source',
       'source-time': '#source + time',
-      'render-span': '#render',
-      'render-time': '#render + time',
+      'source-type-span': '#source-type',
+      // 'type-time': '#type + time',
+      // 'render-span': '#render',
+      // 'render-time': '#render + time',
       'repeats-span': '#repeats',
       'repeats-time': '#repeats + time',
       'iterations-span': '#iterations',
